...
          {lookupLoading ? (
            <View style={[styles.input, styles.inputLoading]}>
              <ActivityIndicator size="small" color="#555" />
            </View>
          ) : (
            <TextInput
              testID="add-product-name-input"
              style={styles.input} value={name} onChangeText={setName}
              placeholder={t('exampleProductName')}
              placeholderTextColor={C.textMid} autoFocus={!productFound && !lookupLoading}
            />
          )}
        </View>
...
