...
        }}
      >
        <Tabs.Screen
          name="index"
          options={{
            title: isFr ? 'Accueil' : 'Home',
            tabBarButtonTestID: 'tab-home',
            tabBarIcon: ({ color, size }) => (
              <Ionicons name="home-outline" size={size} color={color} />
            ),
          }}
        />
        <Tabs.Screen
...
