appId: com.fesperiquette.keepeat
---
- launchApp
- runFlow: helpers/ensure-authenticated.yaml
- tapOn:
    id: tab-scan
- tapOn:
    id: scan-manual-barcode-input
- inputText: 3017620422003
- tapOn:
    id: scan-manual-search-button
- assertVisible:
    id: add-product-name-input
